Fix up handling of commandline options

The handling of commandlines in the primary instance was not
really working at all. Fix things up by creating a new GOptionContext
for each instance, and do the extra work to send --help output
back to the remote instance. Also return a nonzero exit status
when commandline parsing fails.

https://bugzilla.gnome.org/show_bug.cgi?id=662586